samples/_failures_safe/1761543413_b3885e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_46b2cedb.c: In function ‘main’:
./samples/SAFE/__tmp_46b2cedb.c:146:50: error: expected ‘;’ at end of input
  146 |         input_buffer[strcspn(input_buffer, "\n")]
      |                                                  ^
      |                                                  ;
./samples/SAFE/__tmp_46b2cedb.c:146:9: error: expected declaration or statement at end of input
  146 |         input_buffer[strcspn(input_buffer, "\n")]
      |         ^~~~~~~~~~~~
./samples/SAFE/__tmp_46b2cedb.c:146:9: error: expected declaration or statement at end of input
